@@ -9,7 +9,7 @@
     github.user = getOption("github.user"),
     sources = getOption("sources.reports"), path = getwd(),
     slidify = getOption("slidify.template"),
-    open = is.global(2), ...)
+    open = is.global(2), github = FALSE, ...)
 }
 \arguments{
   \item{presentation}{A character vector of length two or
@@ -57,6 +57,10 @@
   \code{presentation} is being used in the global
   environment, if it is then the project directory will be
   opened.}
+
+  \item{github}{logical.  If \code{TRUE} the repo will be
+  sent to public \href{https://github.com/}{GitHub}
+  account.}
 
   \item{\ldots}{Other arguments passed to
   \code{\link[slidify]{author}}.}
